# slickrun-ubuntu

./: Cargo.toml  README.md
src/: app.rs  commands.rs  main.rs  settings.rs
