[package]
name = "slickrun"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
global-hotkey = "0.7"
tray-icon = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
arboard = "3"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
x11rb = { version = "0.13", default-features = false, features = ["allow-unsafe-code"] }
